fixed margin on mobile nav

--- a/assets/css/4-pages/_header.sass
+++ b/assets/css/4-pages/_header.sass
@@ -59,10 +59,8 @@ header
         float: left
         margin: 0 10px 0 10px
         
-    @media (max-width: 500px)
-      margin: 30px 30px 0 30px
       
-    @media (max-width: 350px)
+    @media (max-width: 500px)
       margin: 30px 20px 0 20px
       
       
